--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,11 +2,11 @@
 {
   "builds": [
     {
-      "src": "server/package.json",
+      "src": "./index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
+      "src": "/(.*)",
       "use": "@vercel/next"
     }
   ]
