--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,9 @@
 
+
+
 {
   "builds": [
-    {
-      "src": "./index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "/(.*)",
-      "use": "@vercel/next"
-    }
+    { "src": "server/api/index.ts", "use": "@vercel/node" },
+    { "src": "client/package.json", "use": "@vercel/next" }
   ]
 }
