--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "server/api/index.ts",
+      "src": "server/index.ts",
       "use": "@vercel/node"
     },
     {
@@ -10,7 +10,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/api/index.ts" },
+    { "src": "/api/(.*)", "dest": "server/index.ts" },
     { "src": "/(.*)", "dest": "client/$1" }
   ]
 }
