--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,8 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/next"
-    }
+    { "src": "server/index.ts", "use": "@vercel/node" },
+    { "src": "client/package.json", "use": "@vercel/next" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/index.ts" },
