--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,14 +3,17 @@
  "builds": [
   {
    "src": "index.ts",
-   "use": "@vercel/node",
-   "config": { "includeFiles": ["dist/**"] }
+   "use": "@vercel/node"
   }
  ],
  "routes": [
   {
+   "src": "/api/(.*)",
+   "dest": "/index.ts"
+  },
+  {
    "src": "/(.*)",
-   "dest": "app.js"
+   "dest": "/index.ts"
   }
  ]
 }
